Fix running JUnit tests for bundle context storage on Java 8